# task_manager_2025

./: .coverage  .env-example  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 117ed252b8b2_init.py  8886925b81f0_fix_relationships.py
app/: config.py  database.py  logging_config.py  main.py  middleware.py
app/api/: auth.py  task_manager.py
app/auth/: __init__.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py
app/task_manager/: __init__.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py
tests/: conftest.py  test_auth_api.py  test_tasks_api.py
tests/unit/: test_auth_service.py  test_task_service.py
